--- a/style.css
+++ b/style.css
@@ -84,69 +84,73 @@ main {
             flex: 1;
             flex-direction: column;
             gap: 30px;
-            .input__container {
-              position: relative;
+            .section__input__wrapper {
               display: flex;
-              align-items: flex-start;
-              flex-direction: column;
-              gap: 10px;
-              .select__genderIcon {
-                position: absolute;
-                right: 5px;
-                top: 35px;
-              }
-              .select__dobIcon {
-                position: absolute;
-                right: 10px;
-                top: 35px;
-                width: 24px;
-                height: 24px;
-              }
-
-              label {
-                width: 159px;
-                height: 14px;
-                color: #737373;
-                font-family: "Rethink Sans", sans-serif;
-                font-size: 14px;
-                font-style: normal;
-                font-weight: 600;
-                line-height: normal;
-                letter-spacing: 0.1px;
-              }
-              input[type="text"] {
+              gap: 20px;
+              .input__container {
+                position: relative;
                 display: flex;
-                align-items: center;
-                justify-content: space-between;
-                width: 238px;
-                height: 48px;
-                flex-shrink: 0;
-                outline: none;
-                border-radius: 2px;
-                border: 1px solid #f0f0f0;
-                padding: 14px 18px;
-                ::placeholder {
+                align-items: flex-start;
+                flex-direction: column;
+                gap: 10px;
+                .select__genderIcon {
+                  position: absolute;
+                  right: 5px;
+                  top: 35px;
+                }
+                .select__dobIcon {
+                  position: absolute;
+                  right: 10px;
+                  top: 35px;
+                  width: 24px;
+                  height: 24px;
+                }
+
+                label {
+                  width: 159px;
+                  height: 14px;
                   color: #737373;
                   font-family: "Rethink Sans", sans-serif;
                   font-size: 14px;
                   font-style: normal;
-                  font-weight: 300;
-                  line-height: 20px; /* 142.857% */
-                  letter-spacing: 0.2px;
-                  width: 170px;
+                  font-weight: 600;
+                  line-height: normal;
+                  letter-spacing: 0.1px;
                 }
-              }
-              input[type="text"]:focus {
-                outline: 1px solid #2ec4b6;
-              }
-              input[type="text"]:focus::placeholder {
-                color: #011c34;
-                font-family: "Rethink Sans", sans-serif;
-                font-size: 14px;
-                font-style: normal;
-                font-weight: 400;
-                line-height: 20px;
-                letter-spacing: 0.2px;
+                input[type="text"] {
+                  display: flex;
+                  align-items: center;
+                  justify-content: space-between;
+                  width: 238px;
+                  height: 48px;
+                  flex-shrink: 0;
+                  outline: none;
+                  border-radius: 2px;
+                  border: 1px solid #f0f0f0;
+                  padding: 14px 18px;
+                  ::placeholder {
+                    color: #737373;
+                    font-family: "Rethink Sans", sans-serif;
+                    font-size: 14px;
+                    font-style: normal;
+                    font-weight: 300;
+                    line-height: 20px; /* 142.857% */
+                    letter-spacing: 0.2px;
+                    width: 170px;
+                  }
+                }
+                input[type="text"]:focus {
+                  outline: 1px solid #2ec4b6;
+                }
+                input[type="text"]:focus::placeholder {
+                  color: #011c34;
+                  font-family: "Rethink Sans", sans-serif;
+                  font-size: 14px;
+                  font-style: normal;
+                  font-weight: 400;
+                  line-height: 20px;
+                  letter-spacing: 0.2px;
+                }
               }
             }
           }
@@ -265,6 +269,32 @@ main {
 
 /* MEDIA QUERIES */
 
+@media screen and (max-width: 834px) {
+ body{
+  height: 100vh;
+  .wrapper {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    gap: 25px;
+    padding: 50px;
+    .section1__content{
+      display: flex;
+    }
+    .section2{
+      form{
+        width: 100%;
+        input{
+          width: 400px;
+          height: 80px;
+        }
+      }
+    }
+  }
+ }
+}
+
 @media screen and (max-width: 430px) {
   main {
     background: #f7fdfc;
@@ -318,34 +348,37 @@ main {
             .section1,
             .form__section2 {
               gap: 24px;
-              .input__container {
-                .select__genderIcon {
-                  width: 24px;
-                  height: 24px;
-                  flex-shrink: 0;
-                }
-                .select__genderIcon {
-                  right: 10px;
-                }
-                label {
-                  width: 197px;
-                  height: 14px;
-                }
-                input[type="text"] {
-                  width: 295px;
-                  height: 48px;
-                  flex-shrink: 0;
-                  padding: 14px 16px;
-                  cursor: text;
-                  ::placeholder {
-                    width: 227px;
-                    height: 20px;
-                    font-weight: 400;
+              .section__input__wrapper {
+                flex-direction: column;
+                .input__container {
+                  .select__genderIcon {
+                    width: 24px;
+                    height: 24px;
+                    flex-shrink: 0;
                   }
-                }
-                input[type="text"]:focus {
-                  border-radius: 2px;
-                  border: 3px solid rgba(46, 196, 182, 0.06);
+                  .select__genderIcon {
+                    right: 10px;
+                  }
+                  label {
+                    width: 197px;
+                    height: 14px;
+                  }
+                  input[type="text"] {
+                    width: 295px;
+                    height: 48px;
+                    flex-shrink: 0;
+                    padding: 14px 16px;
+                    cursor: text;
+                    ::placeholder {
+                      width: 227px;
+                      height: 20px;
+                      font-weight: 400;
+                    }
+                  }
+                  input[type="text"]:focus {
+                    border-radius: 2px;
+                    border: 3px solid rgba(46, 196, 182, 0.06);
+                  }
                 }
               }
             }
